add user staff profile API (GET/PUT /users/{user}/staff)
